# Trading-Automation-Main

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: bootstarp.py  logger.py  main.py
app/api/: app.py
app/api/model/: Activation.py
app/common/: Response.py
app/data/: DefaultGroupHandler.py  IGroupHandler.py
app/db/: IDatabase.py  RedisDB.py
app/service/grpc/: GrpcService.py  IGrpcService.py  ITradingStub.py  MyMainTradingServiceServicer.py  MyTradingStub.py  _MainTradingServiceServicer.py
app/service/grpc/model/: types.py
app/service/grpc/proto/dist_main/: MainTradingService_pb2.py  MainTradingService_pb2.pyi  MainTradingService_pb2_grpc.py  __init__.pyi
app/service/grpc/proto/dist_worker/: ActivationTask_pb2.py  ActivationTask_pb2.pyi  ActivationTask_pb2_grpc.py  DeactivationTask_pb2.py  DeactivationTask_pb2.pyi  DeactivationTask_pb2_grpc.py  TransactionTask_pb2.py  TransactionTask_pb2.pyi  TransactionTask_pb2_grpc.py  WorkerTradingService_pb2.py  WorkerTradingService_pb2_grpc.py  __init__.pyi  types_pb2.py  types_pb2.pyi
app/service/grpc/stub/: IStubHandler.py  ITradingStub.py  _Stub.py
scripts/: proto_build.sh
terraform-aws/: main.tf
test/db/: test_RedisDB.py
