[project]
name = "trading-automation-main"
version = "0.1.0"
description = ""
authors = [{ name = "RoieGolst", email = "roiegol9@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "grpcio>=1.68.0,<2",
    "grpcio-tools>=1.68.0,<2",
    "protoletariat>=3.3.2,<4",
    "mypy-protobuf>=3.6.0,<4",
    "redis>=5.2.0,<6",
    "typing-extensions>=4.12.2,<5",
    "fastapi[standard]>=0.115.5,<0.116",
    "pytest>=8.3.4,<9",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
